--- a/index.html
+++ b/index.html
@@ -4,24 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anton&family=Baloo+Bhai+2:wght@400..800&family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Indie+Flower&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Margarine&family=Outfit:wght@100..900&family=Patrick+Hand&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=BBH+Sans+Bartle&family=Baloo+Bhai+2:wght@400..800&family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Indie+Flower&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Margarine&family=Outfit:wght@100..900&family=Patrick+Hand&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    
     <title>Kira Ramones</title>
 </head>
 <body>
     <main>
-        <div class="título">
-            <h1>Kira Ramones</h1>
+        <div class="titulo">
+            <h1>KIRA RAMONES</h1>
         </div>
         <nav class="nav">
-            <u1>
-                <li><a href="">Proyecto 1</a></li>
-                <li><a href="">Proyecto 2</a></li>
-                <li><a href="">Proyecto 3</a></li>
-                <li><a href="">Proyecto 4</a></li>
-                <li><a href="">Proyecto 5</a></li>
-
+            <ul>
+                <li><a href="">Proyectos 1</a></li>
+                <li><a href="">Proyectos 2</a></li>
+                <li><a href="">Proyectos 3</a></li>
+                <li><a href="">Proyectos 4</a></li>
+                <li><a href="">Proyectos 5</a></li>
+                <li><a href="">Proyectos 6</a></li>
+            </ul>
+        </nav>
+    </main>
     
 </body>
 </html>
