--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <main>
         <div class="titulo">
             <h1>KIRA RAMONES</h1>
+            <p>Portafolios de Código Creativo</p>
         </div>
-        <nav class="nav">
+        <nav class="navegacion">
             <ul>
                 <li><a href="">Proyectos 1</a></li>
                 <li><a href="">Proyectos 2</a></li>
