--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                 <li>
                     <a href="https://kira-rc.github.io/p5_pelota_que_rebota/">Sistema de pelotas</a>
                     <a href="https://kira-rc.github.io/Sistema_de_particulas/">Sistema de partículas</a>
+                    <a href="https://kira-rc.github.io/Interactivo_mano/">Interactivo_mano</a>
+                    <a href="https://kira-rc.github.io/Proyecto_interactivo_c-mara/">Juego_interactivo</a>
                 </li>
                
             </ul>
