--- a/index.html
+++ b/index.html
@@ -5,27 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolios de Kira Ramones</title>
     <link rel="stylesheet" href="style.css">
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anton&family=BBH+Sans+Bartle&family=Baloo+Bhai+2:wght@400..800&family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Indie+Flower&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Margarine&family=Outfit:wght@100..900&family=Patrick+Hand&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    
-   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <div class="fondo-estrella"></div>
+
     <main>
         <div class="titulo">
             <h1>KIRA RAMONES</h1>
-            <p>Portafolios del cursso de Código Creativo</p>
+            <p>Portafolio del curso de Código Creativo</p>
         </div>
         <nav class="navegacion">
             <ul>
-                <li>
-                    <a href="https://kira-rc.github.io/p5_pelota_que_rebota/">Sistema de pelotas</a>
-                    <a href="https://kira-rc.github.io/Sistema_de_particulas/">Sistema de partículas</a>
-                    <a href="https://kira-rc.github.io/Interactivo_mano/">Interactivo_mano</a>
-                    <a href="https://kira-rc.github.io/Proyecto_interactivo_c-mara/">Juego_interactivo</a>
-                </li>
-               
+                <li><a href="https://kira-rc.github.io/p5_pelota_que_rebota/">Sistema de pelotas</a></li>
+                <li><a href="https://kira-rc.github.io/Sistema_de_particulas/">Sistema de partículas</a></li>
+                <li><a href="https://kira-rc.github.io/Interactivo_mano/">Interactivo_mano</a></li>
+                <li><a href="https://kira-rc.github.io/Proyecto_interactivo_c-mara/">Juego_interactivo</a></li>
             </ul>
         </nav>
     </main>
